--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,32 @@
 body {
-    background-color: #999;
+  background-color: #999;
+  margin: 0px;
+}
+
+.wrapper {
+  width: 100%;
+  margin-top: 3em;
+  margin-bottom: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.navbar {
+  background-color: #000;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 .avatar {
